Ajout des fichier manquant dans le dossier + modification du css et index du site

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <option value="java" selected>Java</option>
         </select>
 
-        <h2>Le changement va être éffetué ici :</h2>
-        <p id="aRemplir"></p>
+       <br><button id="myButton">CLICK ME</button>
+        <p id="paragraphe"></p>
     </div>
-    <button id="myButton">CLICK ME</button>
-   
+    
+   <div class="centrer">
     <table>
         <thead>
             <tr>
@@ -38,7 +38,7 @@
             
         </tbody>
     </table>
-
+</div>
 
 
     <div class="form-index">
